<resources>
    <string name="app_name">Parcial-Tp3-2024</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_profile">Macy Johnson</string>
    <string name="user_location_profile">Baguio, Philippines</string>
    <string name="user_bio_profile">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="payment_details_profile">Payment Details</string>
    <string name="referral_code_profile">Referral Code</string>
    <string name="new_badge_profile">New</string>
    <string name="settings_profile">Settings</string>
    <string name="logout_profile">Logout</string>
    <string name="limited_badge_offer">Limited offer!</string>
    <string name="mastercard_discount_title_offer">Get 20% discount with your Master credit cards</string>
    <string name="mastercard_description_offer">Use your mastercard with any transaction and get 20% discount instantly! </string>
    <string name="visa_title_offer">25% discount with your VISA credit or debit cards</string>
    <string name="visa_description_offer">Use your VISA credit or debit card with any transaction and get 25% discount instantly! </string>
    <string name="limited_time_offer">Limited time offer!</string>
    <string name="_25_discount_with_visa_credit_cards">25% discount with Visa credit cards</string>
    <string name="_20_discount_for_mastercard_users">20% discount for Mastercard users</string>
    <string name="text_one_way_button">One Way</string>
    <string name="text_round_trip_button">Round trip</string>
    <string name="departure_hint_search">Select Departure</string>
    <string name="arrival_hint_search">Select Arrival</string>
    <string name="date_hint_search">Select Date</string>
    <string name="text_passengers_search">1 passenger</string>
    <string name="text_class_search">Economy</string>
    <string name="section_header_search">Offers</string>
    <string name="text_search_button">Search</string>
    <string name="preference_category">Generales</string>
    <string name="preference_dark_mode">Modo osucro</string>
    <string name="details_button_item">View Details</string>
    <string name="overview_subtitle_details">Overview</string>
    <string name="photos_subtitle_details">Photos</string>
    <string name="book_button_details">Book now</string>
    <string name="icon_placeholder">x</string>
    <string name="offers">Offers</string>
    <string name="_3d2n">3D2N</string>
    <string name="philippines">Philippines</string>
    <string name="palawan">Palawan</string>
    <string name="indonesia">Indonesia</string>
    <string name="bali">Bali</string>
    <string name="_7d6n">7D6N</string>
    <string name="maldives">Maldives</string>
    <string name="baros">Baros</string>
    <string name="_5d4n">5D4N</string>
    <string name="boracay">Boracay</string>
    <string name="paris">Paris</string>
    <string name="from">FROM</string>
    <string name="_1299">$1299</string>
    <string name="flight">Flight</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="see_all">See all</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="hello">Hello</string>
    <string name="macy_johnson">Macy Johnson</string>
    <string name="get_help">Get Help</string>
    <string name="calendar">Calendar</string>
    <string name="notification">Notification</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_version_0_0_1">App version 0.0.1</string>
    <string name="preference_night_mode_key">night_mode_preference</string>
</resources>