<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/boracay" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_md"
                            android:text="Boracay"
                            android:textAppearance="@style/Title" />

                        <TextView
                            android:id="@+id/textView9"
                            style="@style/grayBadge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_view_gray_rounded_md"
                            android:text="5D4N"
                            android:textAppearance="@style/Overline" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:text="Philippines"
                        android:textAppearance="@style/Body1"
                        android:textColor="@color/black_500" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/priceDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="$349"
                        android:textAppearance="@style/H1" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/overview_subtitle_details"
                android:textAppearance="@style/SectionHeader" />

            <TextView
                android:id="@+id/txtOverviewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars."
                android:textAppearance="@style/Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2xl"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photos_subtitle_details"
                    android:textAppearance="@style/SectionHeader" />


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:contentDescription="NULL"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtPhotos">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/boatCard"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:layout_margin="8dp"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/boatCardPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="NULL"
                                android:src="@drawable/boat" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/palmTreesCard"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:layout_margin="8dp"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/palmTreePreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/palm_trees" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/marinaCard"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:layout_margin="8dp"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/marinaPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/marina" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </HorizontalScrollView>


            </LinearLayout>

            <Button
                android:id="@+id/btnBookNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/book_button_details" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>